# solarcharge

./: .gitignore  README.md  RELEASE_NOTES.md  config.toml.example  pyproject.toml  solar_charge.service
.github/: copilot-instructions.md
companion_app/: README.md  pubspec.yaml
companion_app/ios/: Podfile
companion_app/ios/Runner/: Info.plist
companion_app/ios/Runner.xcodeproj/: project.pbxproj
companion_app/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
companion_app/lib/: app.dart  main.dart
companion_app/lib/models/: config.dart  config.g.dart  status.dart  status.g.dart
companion_app/lib/providers/: api_providers.dart
companion_app/lib/screens/: charging_history_screen.dart  dashboard_screen.dart  details_screen.dart  history_screen.dart  settings_screen.dart
companion_app/lib/services/: api_service.dart
companion_app/lib/widgets/: charts_view.dart  power_flow_card.dart  status_badge.dart
companion_app/linux/: CMakeLists.txt
companion_app/linux/runner/: my_application.cc
companion_app/test/: widget_test.dart
solar_charge/: alfen.py  alfen_http.py  battery_guard.py  controller.py  db.py  history.py  main.py  senec.py  state.py  timeseries.py  web.py
